<resources>
    <string name="app_name">WeatherApp</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_7_days">Next 7 Days ›</string>
    <string name="today">Today</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="rainfall">RainFall</string>
    <string name="c">°C</string>
    <string name="weather_icon">Weather icon</string>
    <string name="search_city">Search city</string>
    <string name="delhi_india">Delhi,\nIndia</string>
    <string name="_19">19</string>
    <string name="sat_apr_04">Sat, Apr 04</string>
    <string name="_3cm">3cm</string>
    <string name="_19km_h">19km/h</string>
    <string name="_64">64%</string>
    <string name="_13_00">12:00 am</string>
    <string name="_21">21°</string>
    <string name="label_now">Now</string>
    <string name="label_current_city">Current City</string>
    <string name="location_permission_is_required_to_provide_weather_information_for_your_current_location">Location permission is required to provide weather information for your current location.</string>
    <string name="settings">Settings</string>
    <string name="tomorrow_text">Tomorrow</string>
    <string name="next_7_days_second">Next 7 Days</string>
    <string name="hourly_weather_icon">Hourly weather icon</string>
    <string name="search_city_2">Search City</string>
    <string name="search">Search</string>
    <string name="type_a_city_name">Type a city name...</string>
    <string name="type_at_least_2_characters">Type at least 2 characters</string>
    <string name="location">Location</string>

</resources>